added html elements

--- a/index.html
+++ b/index.html
@@ -2,16 +2,133 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title></title>
+<title>Robert Dunn | Project Analysis</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body>
-<header></header>
-<nav></nav>
-<article></article>
-<aside></aside>
-<footer></footer>
+<header>
+	<fieldset>
+				<legend>
+					<h1>Robert Dunn | Project Analysis</h1></legend>
+				<p>Client: From The Ashes Media</p>
+				<p>Project: Website Design</p>
+				<p>Designer: Robert Dunn</p>
+				<p>Document: Project Analysis</p>
+</header>
+<nav>
+	<ul>
+		<li>Site Intent</li>
+		<li>Competitive Analysis</li>
+		<li>Website Keywords </li>
+		<li>Target Audience</li>
+	</ul>
+</nav>
+<article>
+	<h1>Site Intent</h1>
+	<p>The overall objective to From The Ashes Media is to offer services that musicians look for all the time, but now in one place. By providing musicians a place to record their music, shoot a music video, get album artwork all in a one-stop shop.</p>
+	<p>From The Ashes is a parent company to Palace of Sorrows recording Studio, and partnered up with Tackleboxxdesigns to provide the best modern day graphics and web work for the people who need it the most. </p>
+	<p>Palace of Sorrows Studio has worked with several recording artists, (locally and nationally, as well as From The Ashes media which just finished a DVD for Famed Guitarist John 5 (Rob Zombie/ Marilyn Manson) as well as other videos for the Zombie Camp.</p>
+	<p>From The Ashes will utilize 6 web pages to dial in the specific areas that they want to be known for. About, palace of sorrow, tackleboxxdesigns, videos, Gallery, and Contact. With this being the main focus we can deliver all the necessary goods and quality needs to gain all aspects of the music industry and musicians.</p>
+</article>
+<article>
+	<h1>Competitive Analysis</h1>
+	<p>Based on the competitive research and marketing, From the Ashes can provide a positive step in fair pricing when it comes to recording, video work, graphic design of potential musician / clients needs.  From the Ashes Media is a liitle unique in offering all options listed above, however there are a few sites that cater some to musicians, and they are as follows.</p>
+	</article>
+	<article><h2>Reverbnation</h2>
+	<p>Traffic Rankings</p>
+	<ul>
+		<li>Global:	1,591</li>
+		<li>United States: 755</li>
+	</ul>
+	<p>Demographics</p>
+	<ul>
+		<li>Age: 13 - 55</li>
+		<li>Education: College / None</li>
+		<li>Children: Yes / No</li>
+		<li>Gender: Male / Female</li>
+		<li>Browser Location: Home / School / Work</li>
+	</ul>
+	<p>Links</p>
+	<ul>
+		<li>Total Sites: 67,426</li>
+	</ul>
+	</article>
+	<article>
+		<h2>Facebook</h2>
+	<p>Traffic Rankings</p>
+	<ul>
+		<li>Global:	1</li>
+		<li>United States: 2</li>
+	</ul>
+	<p>Demographics</p>
+	<ul>
+		<li>Age: 13 - 65</li>
+		<li>Education: College / None</li>
+		<li>Children: Yes / No</li>
+		<li>Gender: Male / Female</li>
+		<li>Browser Location: Home / School / Work</li>
+	</ul>
+	<p>Links</p>
+	<ul>
+		<li>Total Sites: 8,222,243</li>
+	</ul>
+	</article>
+	<article>
+	<h2>Soundcloud</h2>
+	<p>Traffic Rankings</p>
+	<ul>
+		<li>Global:	218</li>
+		<li>United States: 158</li>
+	</ul>
+	<p>Demographics</p>
+	<ul>
+		<li>Age: 13 - 55</li>
+		<li>Education: College / None</li>
+		<li>Children: Yes / No</li>
+		<li>Gender: Male / Female</li>
+		<li>Browser Location: Home / School / Work</li>
+	</ul>
+	<p>Links</p>
+	<ul>
+		<li>Total Sites: 170,365</li>
+	</ul>
+	</article>
+<article>
+	<h1>Website Keywords – From The Ashes</h1>
+	<p>
+		Music, recording , recording studio, music video, graphic design, web design, john 5, rob, zombie, album, recording an album, shure, Mackie, pro tools, waves, slate digital, Muncie Indiana, Indiana, Muncie, Muncie recording studio, video editing, mixing, mastering, from the ashes, palace of sorrow, 
+	</p>
+</article>
+<article>
+	<h1>Target Audience</h1>
+	<p>Jordan – High school Student / Musician</p>
+	<ul>
+		<li>Age: 16</li>
+		<li>Location: Muncie, IN</li>
+		<li>Relationship: single</li>
+		<li>Number of children: 0</li>
+		<li>Living Status: student</li>
+		<li>Education: High school</li>
+		<li>Work: none</li>
+		<li>Goals: to be famous musician, and tour the world</li>
+		<li>Uses site for: putting his album together from scratch to full on cd duplication, and possible music video</li>
+	</ul>
+</article>
+<article>
+	<p>Bill – IT / Programmer</p>
+	<ul>
+		<li>Age: 52</li>
+		<li>Location: Anderson, IN</li>
+		<li>Relationship: Married</li>
+		<li>Number of children: 3</li>
+		<li>Education: Masters Program Graduate with honors</li>
+		<li>Work: Freelance IT guru traveling all the time for every kind of computer issues</li>
+		<li>Goals: To live life to fullest, and have fun</li>
+		<li>Uses site for: laying down tracks, and uses video he shoots on his trips to make a music video to one of his songs, and share with the world</li>
+	</ul>
+</article>
+<footer>Robert Dunn | 2013 | Web Standards Project: Project Analysis</footer>
 </body>
 </html>
