--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
 <body>
 <header>
+	<h1>Robert Dunn | Project Analysis</h1>
 	<fieldset>
-				<legend>
-					<h1>Robert Dunn | Project Analysis</h1></legend>
 				<p>Client: From The Ashes Media</p>
 				<p>Project: Website Design</p>
 				<p>Designer: Robert Dunn</p>
 				<p>Document: Project Analysis</p>
+				</fieldset>
 </header>
 <nav>
 	<ul>
-		<li>Site Intent</li>
-		<li>Competitive Analysis</li>
-		<li>Website Keywords </li>
-		<li>Target Audience</li>
+		<li><a href="/">Intent</a></li>
+		<li><a href="/">Competitive Analysis</a></li>
+		<li><a href="/">Website Keywords </a></li>
+		<li><a href="/">Target Audience</a></li>
 	</ul>
 </nav>
 <article>
@@ -36,7 +36,8 @@
 	<h1>Competitive Analysis</h1>
 	<p>Based on the competitive research and marketing, From the Ashes can provide a positive step in fair pricing when it comes to recording, video work, graphic design of potential musician / clients needs.  From the Ashes Media is a liitle unique in offering all options listed above, however there are a few sites that cater some to musicians, and they are as follows.</p>
 	</article>
-	<article><h2>Reverbnation</h2>
+	<article class="multi">
+		<h2>Reverbnation</h2>
 	<p>Traffic Rankings</p>
 	<ul>
 		<li>Global:	1,591</li>
@@ -55,7 +56,7 @@
 		<li>Total Sites: 67,426</li>
 	</ul>
 	</article>
-	<article>
+	<article class="multi">
 		<h2>Facebook</h2>
 	<p>Traffic Rankings</p>
 	<ul>
@@ -75,7 +76,7 @@
 		<li>Total Sites: 8,222,243</li>
 	</ul>
 	</article>
-	<article>
+	<article class="multi">
 	<h2>Soundcloud</h2>
 	<p>Traffic Rankings</p>
 	<ul>
@@ -100,7 +101,9 @@
 	<p>
 		Music, recording , recording studio, music video, graphic design, web design, john 5, rob, zombie, album, recording an album, shure, Mackie, pro tools, waves, slate digital, Muncie Indiana, Indiana, Muncie, Muncie recording studio, video editing, mixing, mastering, from the ashes, palace of sorrow, 
 	</p>
+	
 </article>
+
 <article>
 	<h1>Target Audience</h1>
 	<p>Jordan – High school Student / Musician</p>
